Fixed problem: Some elements under the header did not fit on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ h1 {
 }
 
 #leftSection {
-    width: 415px;
+    min-width: 350px;
 }
 
 #rightSection {
@@ -56,7 +56,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    width: 415px;
+    width: clamp(350px, 415px, 100%);
 }
 
 #incidentContainer {
@@ -84,10 +84,11 @@ select {
 
 .incDriverRows {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 4px;
     margin-bottom: 4px;
     flex-wrap: wrap;
+    justify-content: space-between;
     position: relative;
 }
 
@@ -116,7 +117,7 @@ select {
 }
 
 .reasoning {
-    width: 405px;
+    width: 98%;
     font-size: 0.9rem;
 }
 
@@ -128,7 +129,7 @@ textarea {
 
 #output {
     font-size: 0.9rem;
-    width: 405px;
+    width: 98%;
 }
 
 .bottomButtons {
@@ -141,7 +142,7 @@ textarea {
     border-radius: 3px;
     color: white;
     font-size: 16px;
-    width: 400px;
+    width: 300px;
     padding: 6px 0;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
@@ -196,20 +197,24 @@ textarea {
 
 .driversBtn {
     padding: 0;
-    position: absolute;
-    right: 2px;
     width: 36px;
     height: 24px;
     font-size: 1rem;
 }
 
 .driver-name {
-    width: 164px;
+    width: 25%;
+    flex-grow: 1;
+}
+
+#format {
+    width: clamp(350px, 415px, 100%);
 }
 
 .otherDeets {
     margin-left: 62px;
-    width: 343px;
+    width: 50px;
+    flex-grow: 1;
 }
 
 #footer{
